[package]
name = "ll0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
zip = { version = "0.6", default-features = false, features = [
    "zstd",
] }
bytemuck = "1.12"
anyhow = "1.0.76"

[[bin]]
name = "decompile"
test = false
bench = false

[[bin]]
name = "unzip"
test = false
bench = false

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3